--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#101010"
     tools:context=".MainActivity">
 
     <Button
@@ -39,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="How many?"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.183"
@@ -49,8 +51,8 @@
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:layout_marginBottom="16dp"
-        android:background="?android:attr/listDivider"
-        android:scaleY="12"
+        android:background="#6750A3"
+        android:scaleY="5"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -59,7 +61,8 @@
         android:id="@+id/resultsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="0"
+        android:textColor="#6750A3"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
